# andy-protogen

./: CHANGELOG.md  CLAUDE.md  README.md  config.yaml  pyproject.toml
docs/plans/: 2026-02-15-batch1-foundation.md  2026-02-15-feature-roadmap-design.md  2026-02-24-phase1-implementation.md  2026-02-24-progressive-optimization-design.md  2026-02-25-performance-and-frontend-design.md  2026-02-25-performance-frontend-impl.md  2026-02-25-phase3-architecture-refactoring.md
expressions/: manifest.json
scripts/: deploy.sh  generate_bad_apple.py  generate_placeholder_faces.py  install_service.sh
src/protogen/: animation.py  blink_controller.py  boot_animation.py  commands.py  config.py  expression.py  expression_manager.py  expression_store.py  input_manager.py  main.py  render_pipeline.py  system_monitor.py
src/protogen/display/: __init__.py  base.py  hub75.py  mock.py
src/protogen/generators/: __init__.py  breathe.py  color_shift.py  glitch.py  matrix_rain.py  plasma.py  rainbow_sweep.py  scrolling_text.py  starfield.py
src/protogen/inputs/: button.py  web.py
systemd/: protogen.service
tests/: conftest.py  test_animation.py  test_blink_controller.py  test_boot_animation.py  test_boundary.py  test_commands.py  test_config.py  test_e2e.py  test_effects.py  test_error_handling.py  test_expression.py  test_expression_manager.py  test_expression_store.py  test_input_manager.py  test_procedural.py  test_render_pipeline.py  test_system_monitor.py  test_web_api.py  test_websocket.py
web/static/: index.html
